# asset-loading

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
res/models/: cube.glb
res/models/m16/: BLENDER-EXPORT.gltf  scene.gltf
res/models/pistol/: BLENDER-EXPORT.gltf  BROKEN.gltf  GUN-2STEP.gltf  anim-empty.gltf  check-for-bone.gltf  gun-base.gltf  multi-parenting.gltf  multiple-meshes.gltf  parent-anims.gltf  queso.gltf  scene.gltf  simple-gun-anim.gltf  skin-and-stat.gltf  skinned-hands1.gltf  skinned.gltf  test-cube-texture.gltf  tired.gltf  unmatched.gltf  untitled.gltf
res/models/shotgun/: scene.gltf
res/shaders/: basic_shader.vert  default_shader.frag  default_shader.vert  grid.frag  shadeless_shader.frag
src/: AnimationPlayer.cpp  AnimationPlayer.h  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Empty.cpp  Empty.h  ErrorLogger.h  Main.cpp  Main.h  Map.cpp  Map.h  Mesh.cpp  Mesh.h  ModelLoader.cpp  ModelLoader.h  Shader.cpp  Shader.h  Utils.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Utils/: GLMUtils.cpp  GLMUtils.h
src/Window/: WindowManager.cpp  WindowManager.h
